@@ -4,7 +4,8 @@ Changelog
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fixed XSS vulnerability on rating action
+  [keul, cekk]
 
 
 1.1 (2013-09-20)
